# rag_viajes

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: docetl_llms.md  plan.md
src/viajes/: __init__.py  cli.py  config.py
temp_md/: rutas25_iag7_v3.md
tests/test_viajes/: test_config.py
