[project]
name = "rag-viajes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langfuse>=2.60.7",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.2",
    "uvicorn>=0.34.3",
]
